--- a/xchng_clean.ipynb
+++ b/xchng_clean.ipynb
@@ -4,9 +4,44 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "        <script type=\"text/javascript\">\n",
+       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
+       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (typeof require !== 'undefined') {\n",
+       "        require.undef(\"plotly\");\n",
+       "        requirejs.config({\n",
+       "            paths: {\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-2.9.0.min']\n",
+       "            }\n",
+       "        });\n",
+       "        require(['plotly'], function(Plotly) {\n",
+       "            window._Plotly = Plotly;\n",
+       "        });\n",
+       "        }\n",
+       "        </script>\n",
+       "        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "import functions as fn"
+    "import functions as fn\n",
+    "import plotly.offline as po\n",
+    "po.init_notebook_mode(connected=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## EUR"
    ]
   },
   {
@@ -44,14 +79,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADF Statistics: -63.681206928869734\n",
-      "p-value: 0.0\n",
-      "No. of lags used: 0\n",
-      "No. of observations used: 4112\n",
+      "ADF Statistics: -0.9844801562254626\n",
+      "p-value: 0.7588826374491471\n",
+      "No. of lags used: 2\n",
+      "No. of observations used: 3545\n",
       "Critical Values\n",
-      "  1%: -3.4319412905876083\n",
-      "  5%: -2.862243144950704\n",
-      "  10%: -2.567144290642648\n",
+      "  1%: -3.4321959919437615\n",
+      "  5%: -2.8623556551606115\n",
+      "  10%: -2.56720418685011\n",
       "===================================\n",
       "For INR/EUR the series is Non-Stationary\n",
       "For AUD/EUR the series is Non-Stationary\n",
@@ -85,14 +120,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADF Statistics: -63.681206928869734\n",
+      "ADF Statistics: -45.80120599883142\n",
       "p-value: 0.0\n",
-      "No. of lags used: 0\n",
-      "No. of observations used: 4112\n",
+      "No. of lags used: 1\n",
+      "No. of observations used: 3546\n",
       "Critical Values\n",
-      "  1%: -3.4319412905876083\n",
-      "  5%: -2.862243144950704\n",
-      "  10%: -2.567144290642648\n",
+      "  1%: -3.432195470981875\n",
+      "  5%: -2.8623554250439236\n",
+      "  10%: -2.5672040643429725\n",
       "===================================\n",
       "For INR/EUR the series is Stationary\n",
       "For AUD/EUR the series is Stationary\n",
@@ -106,6 +141,14 @@
    "source": [
     "stationary = fn.convt_to_stat(df_lst, True, 1)\n",
     "fn.stationary_check(stationary)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## INR/EUR"
    ]
   },
   {
@@ -127,16 +170,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "21:59:47 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "22:00:01 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:10:10 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:10:43 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Forecast data shape: (1064, 22)\n",
-      "MAPE: 17.42%\n",
+      "Forecast data shape: (1064, 16)\n",
+      "MAPE: 17.41%\n",
       "RMSE: 0.00325\n"
      ]
     }
@@ -154,8 +197,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22:00:08 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "22:00:15 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:10:49 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:11:00 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -172,8 +215,199 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## AUD/EUR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forecast for AUD/EUR exchange\n",
+      "========================================\n",
+      "Training data shape: (3221, 2)\n",
+      "Test data shape: (1380, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16:11:09 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:11:51 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forecast data shape: (1380, 16)\n",
+      "MAPE: 11.96%\n",
+      "RMSE: 0.08995\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn.uni_forecast(df_lst, 1)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16:11:56 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:12:00 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAPE: 12.16%\n",
+      "RMSE: 0.09354\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn.mul_forecast(df_lst, 1)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## JPY/EUR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forecast for JPY/EUR exchange\n",
+      "========================================\n",
+      "Training data shape: (2879, 2)\n",
+      "Test data shape: (1234, 2)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16:12:08 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:12:10 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forecast data shape: (1234, 16)\n",
+      "MAPE: 21.05%\n",
+      "RMSE: 0.00182\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn.uni_forecast(df_lst, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "16:12:16 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:13:02 - cmdstanpy - INFO - Chain [1] done processing\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MAPE: 15.5%\n",
+      "RMSE: 0.0014\n"
+     ]
+    }
+   ],
+   "source": [
+    "fn.mul_forecast(df_lst, 2)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluation for comparison"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### INR/EUR\n",
+    "> Univariate\n",
+    ">\n",
+    "> MAPE: 17.42 ------- RMSE: 0.00325\n",
+    "\n",
+    "> Multivariate \n",
+    ">\n",
+    "> MAPE: 17.41% ------- RMSE: 0.00327\n",
+    "\n",
+    "#### AUD/EUR\n",
+    "> Univariate\n",
+    ">\n",
+    "> MAPE: 11.86% ------- RMSE: 0.08922\n",
+    "\n",
+    "> Multivariate \n",
+    ">\n",
+    "> MAPE: 12.16% ------- RMSE: 0.09354\n",
+    "\n",
+    "#### JPY/EUR\n",
+    "> Univariate\n",
+    ">\n",
+    "> MAPE: 23.13% ------- RMSE: 0.00217\n",
+    "\n",
+    "> Multivariate \n",
+    ">\n",
+    "> MAPE: 15.47% ------- RMSE: 0.0014"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## GBP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -181,14 +415,14 @@
      "output_type": "stream",
      "text": [
       "The number of unique exchange (slug) is 6\n",
-      "ADF Statistics: -1.091002006011663\n",
-      "p-value: 0.718646829467632\n",
-      "No. of lags used: 27\n",
-      "No. of observations used: 4572\n",
+      "ADF Statistics: -1.8099914806714101\n",
+      "p-value: 0.3755126049860663\n",
+      "No. of lags used: 5\n",
+      "No. of observations used: 4723\n",
       "Critical Values\n",
-      "  1%: -3.431781096955076\n",
-      "  5%: -2.8621723770750744\n",
-      "  10%: -2.567106617321074\n",
+      "  1%: -3.431735318157509\n",
+      "  5%: -2.8621521529237954\n",
+      "  10%: -2.5670958511008046\n",
       "===================================\n",
       "For AUD/GBP the series is Non-Stationary\n",
       "For USD/GBP the series is Non-Stationary\n",
@@ -207,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -224,14 +458,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ADF Statistics: -14.834493833386786\n",
-      "p-value: 1.8773912257785195e-27\n",
-      "No. of lags used: 26\n",
-      "No. of observations used: 4573\n",
+      "ADF Statistics: -48.540600498422684\n",
+      "p-value: 0.0\n",
+      "No. of lags used: 2\n",
+      "No. of observations used: 4726\n",
       "Critical Values\n",
-      "  1%: -3.431780783834263\n",
-      "  5%: -2.862172238745658\n",
-      "  10%: -2.567106543681959\n",
+      "  1%: -3.4317344382982022\n",
+      "  5%: -2.8621517642166197\n",
+      "  10%: -2.567095644175108\n",
       "===================================\n",
       "For AUD/GBP the series is Stationary\n",
       "For USD/GBP the series is Stationary\n",
@@ -248,8 +482,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -266,17 +508,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22:06:12 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "22:06:26 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:13:40 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:14:04 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Forecast data shape: (1378, 22)\n",
-      "MAPE: 22.52%\n",
-      "RMSE: 0.14975\n"
+      "Forecast data shape: (1378, 16)\n",
+      "MAPE: 22.6%\n",
+      "RMSE: 0.14993\n"
      ]
     }
    ],
@@ -286,15 +528,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22:06:29 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "22:06:40 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:14:10 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:14:21 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
