implement select currency B

--- a/xchng_clean.ipynb
+++ b/xchng_clean.ipynb
@@ -37,6 +37,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['EGP', 'SCR', 'NOK', 'SZL', 'MYR', 'PKR', 'NZD', 'CUP', 'CAD',\n",
+       "       'CHF', 'ZMW', 'FJD', 'XOF', 'IDR', 'JPY', 'UAH', 'TWD', 'MMK',\n",
+       "       'BRL', 'CNY', 'HUF', 'MXN', 'BMD', 'KWD', 'BBD', 'TTD', 'SEK',\n",
+       "       'BWP', 'HNL', 'CZK', 'ISK', 'LKR', 'USD', 'EUR', 'TND', 'ZAR',\n",
+       "       'SGD', 'BYN', 'PEN', 'XPF', 'THB', 'GBP', 'KRW', 'AUD', 'MOP',\n",
+       "       'PGK', 'PHP', 'BSD', 'CRC', 'JOD', 'MZN', 'TRY', 'BGN', 'DJF',\n",
+       "       'COP', 'INR', 'BAM', 'PLN', 'SAR', 'ARS', 'IRR', 'NIO', 'MWK',\n",
+       "       'LBP', 'IQD', 'KES', 'UGX', 'KZT', 'NGN', 'GTQ', 'PYG', 'ETB',\n",
+       "       'SVC', 'VND', 'BND', 'MAD', 'KYD', 'ILS', 'MKD', 'HKD', 'RUB',\n",
+       "       'AED', 'GMD', 'BZD', 'SLL', 'MVR', 'DKK', 'MUR', 'JMD', 'OMR',\n",
+       "       'DZD', 'BOB', 'RSD', 'TZS', 'UZS', 'BDT', 'CLP', 'RON', 'QAR',\n",
+       "       'ANG', 'MGA', 'HTG', 'BHD', 'ALL', 'BIF', 'SOS', 'MDL', 'PAB',\n",
+       "       'XAF', 'GHS', 'SDG', 'DOP', 'UYU'], dtype=object)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fn.view_cur()"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
